--- a/TODO
+++ b/TODO
@@ -12,45 +12,40 @@ files:
 		mime: [Getter] } } } at upload.pl line 29.
 
 
-https://github.com/rgrove/combohandler
-https://github.com/yui/phploader/blob/master/phploader/combo.php
+npm module
+	load from app directory or npm module
 
-http://localhost:8666/combo?test/foo/3.5/sp-test-foo-min.js&uifwk/14.2.0.0.253/uifwk-bar/uifwk-bar-min.js
-http://localhost:8666/combo?test/foo/3.5/assets/skins/ace/sp-test-foo.css
-http://localhost:8666/combo?test/foo/3.5/assets/skins/ace/warn.png
-http://yui.yahooapis.com/gallery-2012.03.23-18-00/build/gallery-paginator/assets/skins/sam/warn.png
+optimize dependency loading via nodejs:
+	configure versions on the server
+	call function that does Y.Loader.resolve() to return complete list of deps
+		memoized, so the result is cached
+	also provide function to generate loader config
 
 
 upload
 	upload output of build: either a module (build/...) or bundle (the whole build directory or list of directories)
 
-	args:
-		namespace/module/version or bundle/version
-		directory
-		(optional) host url -- defaults to localhost:8080
-
-	fix relative url's in css files
-
-	default to `whoami`, override with -u
-		if new user and mail-server is not set, ask for email
-	initial request to check that module/bundle/version is not used and check authentication type
-		if require password, ask for it and send as part of upload token request
-	authenticate and get upload token
-		if namespace or bundle doesn't exist, create and set owner to creator
+	if namespace or bundle doesn't exist, create and record owner in description
+		ask for description
+	ask for notes
 	send one module at a time, since bundle could be huge
 		if doesn't have -min.js, create it
 		if --company is configured, put copyright at top:  /* Copyright {year} {company} All rights reserved. */
 		compute transitive dependencies when upload, to reduce number of requests
 	send finished
+		toss token
 
-	upload token
-		store last used, so if conversation not closed, toss after 1 hour
-		cull when generate the next token
+	args:
+		-g => gallery module, so prepend sp- to name
+
+	fix relative url's in css files
+
+	if new user and mail-server is not set, ask for email
+
 auth
-	UnixAuth: when passwords on machine are sufficient
-	others, e.g., LDAPAuth
-
 	manage list of users who can upload/edit each namespace or bundle
+		based on groups
+
 	config option:  --mail-server yahoo-inc.com
 		if set, allow author to not include @...; automatically append @host
 
@@ -71,3 +66,22 @@ ui for stats:
 		scroll buttons:  5% (<), 25% (<<), all the way (|<)
 
 script to pull a specific version of a gallery module into the repo
+
+-----
+
+https://github.com/rgrove/combohandler
+https://github.com/yui/phploader/blob/master/phploader/combo.php
+
+http://localhost:8666/combo?test/foo/3.5/sp-test-foo-min.js&uifwk/14.2.0.0.253/uifwk-bar/uifwk-bar-min.js
+http://localhost:8666/combo?test/foo/3.5/assets/skins/ace/sp-test-foo.css
+http://localhost:8666/combo?test/foo/3.5/assets/skins/ace/warn.png
+http://yui.yahooapis.com/gallery-2012.03.23-18-00/build/gallery-paginator/assets/skins/sam/warn.png
+
+https
+	http://blogs.perl.org/users/brian_d_foy/2011/07/now-you-need-lwpprotocolhttps.html
+
+	openssl genrsa -des3 -out manager.key 1024
+	openssl req -new -key manager.key -out manager.csr
+	cp manager.key manager.key.org
+	openssl rsa -in manager.key.org -out manager.key
+	openssl x509 -req -days 365 -in manager.csr -signkey manager.key -out manager.crt
