don't append mailserver to wildcard user

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+browse: make group a link to page showing members of group
 update TESTING with cases for group mgmt, module mgmt, etc
 switch to use nodejs native zlib support
 
