--- a/TODO
+++ b/TODO
@@ -1,13 +1,12 @@
+if express-hbs doesn't want to support it, remove layout from browse & browse-util
+
+
 * cli
-	delete namespace, bundle, ns module, version
-		mark as deleted in info
-		(not actually deleted, to avoid re-using name/version)
+	change namespace/module/bundle descriptions & tags
 
 	remove group
 		normal user can only modify group to which he belongs
 		only remove if nothing is in the group
-
-	change namespace/module/bundle descriptions & tags
 
 
 optimize dependency loading when using nodejs:
